# versionstore-operator

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.md
src/: gcs_watcher.rs  main.rs  reconciler.rs
